--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik&family=Tapestry&display=swap");
+@charset "UTF-8";
 * {
   padding: 0;
   margin: 0;
@@ -8,7 +8,6 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -86,29 +85,65 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-size: 26px;
   font-weight: 300;
 }
 
+@font-face {
+  font-family: "Untitled Sans";
+  src: url("../fonts/TestUntitledSerif-Regular.eot");
+  src: local("☺"), url("../fonts/TestUntitledSerif-Regular.woff") format("woff"), url("../fonts/TestUntitledSerif-Regular.ttf") format("truetype"), url("../fonts/TestUntitledSerif-Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "SaolDisplay-Regular";
+  src: url("../fonts/4c4c08af466e9ad071b6d69cf44093df.eot"); /* IE9*/
+  src: url("4c4c08af466e9ad071b6d69cf44093df.eot?#iefix") format("embedded-opentype"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff2") format("woff2"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff") format("woff"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.ttf") format("truetype"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.svg") format("svg"); /* iOS 4.1- */
+  font-weight: normal;
+  font-style: normal;
+}
 .wrapper {
   min-width: 100%;
   overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
+}
+
+._container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0px 15px;
+  box-sizing: content-box;
 }
 
 .container {
-  max-width: 1135px;
+  max-width: 1800px;
   margin: 0 auto;
   padding: 0px 15px;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
+}
+
+.container-main {
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 0px 20px;
+  box-sizing: content-box;
+}
+
+._ibg {
+  position: relative;
+}
+
+._ibg img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .header {
@@ -120,67 +155,49 @@ h6 {
 }
 
 .header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   min-height: 112px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .header__logo {
-  margin: 0px 308px 0px 0px;
   padding: 10px;
 }
 
-.menu__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+.header__burger {
+  display: block;
+  position: relative;
+  width: 30px;
+  height: 20px;
+  z-index: 3;
 }
 
-.menu__item {
-  margin: 0px 30px 0px 0px;
-  font-family: 'Rubik';
-  font-weight: 400;
-  font-size: 17px;
-  line-height: 20px;
-  letter-spacing: 0.03em;
-  color: #000000;
+.header__burger-title {
+  font-family: "Untitled Sans";
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 120%;
+  text-align: right;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
 }
 
-.menu__item:active {
-  font-weight: 500;
-  font-size: 17px;
-  line-height: 20px;
-  letter-spacing: 0.03em;
-  border-radius: 5px;
+.page {
+  flex: 1 1 auto;
 }
 
-.menu__item a:before {
-  content: "";
-  border-bottom: 2px solid #000000;
-  background: -webkit-gradient(linear, left top, right top, from(#6A11CB), to(#2575FC));
-  background: linear-gradient(90deg, #6A11CB 0%, #2575FC 100%);
+.main-block {
+  position: relative;
 }
 
-.header__contact {
-  margin: 0px 47px 0px 0px;
-}
-
-.contact__choice-languages {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background: url("../image/icons/Polygon 1.png") 26px 5px no-repeat;
-  font-weight: 400;
-  font-size: 17px;
-  line-height: 20px;
-  letter-spacing: 0.03em;
-  color: #000000;
+.main-block__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  opacity: 0.5;
 }
