--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,25 @@
 @import "_nullstyle";
-@import url('https://fonts.googleapis.com/css2?family=Rubik&family=Tapestry&display=swap');
 // null style
+@font-face {
+    font-family: 'Untitled Sans';
+	src: url('../fonts/TestUntitledSerif-Regular.eot');
+	src: local('☺'), url('../fonts/TestUntitledSerif-Regular.woff') format('woff'), url('../fonts/TestUntitledSerif-Regular.ttf') format('truetype'), url('../fonts/TestUntitledSerif-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {font-family: "SaolDisplay-Regular";
+    src: url("../fonts/4c4c08af466e9ad071b6d69cf44093df.eot"); /* IE9*/
+    src: url("4c4c08af466e9ad071b6d69cf44093df.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff2") format("woff2"), /* chrome、firefox */
+    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff") format("woff"), /* chrome、firefox */
+    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.svg") format("svg"); /* iOS 4.1- */
+    font-weight: normal;
+	font-style: normal;
+}
+
+
+
 .wrapper {
     min-width: 100%;
     overflow: hidden;
@@ -11,18 +30,35 @@ body {
     
 }
 
-//============================ Container ============================================================== //
-.container {
-    max-width: 1135px;
+//============================ Containers and important classes ============================================================== //
+._container {
+    max-width: 1400px;
     margin: 0 auto;
     padding: 0px 15px;
     box-sizing: content-box;
 }
 .container {
-    max-width: 1135px;
+    max-width: 1800px;
     margin: 0 auto;
     padding: 0px 15px;
     box-sizing: content-box;
+}
+.container-main {
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 0px 20px;
+    box-sizing: content-box;
+}
+._ibg {
+    position: relative;
+}
+._ibg img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
 }
 //============================ Header ============================================================== //
 .header {
@@ -36,42 +72,79 @@ body {
     display: flex;
     min-height: 112px;
     align-items: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 .header__logo {
-    margin: 0px 308px 0px 0px;
+    // margin: 0px 308px 0px 0px;
     padding: 10px;
 }
-.header__menu {
+.header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    z-index: 3;
+}
+.header__burger-title {
+    font-family: 'Untitled Sans';
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 120%;
+    text-align: right;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+}
+// .header__menu {
+    
+// }
+// .menu__list {
+//     display: flex;
+//     flex-wrap: wrap;
+// }
+// .menu__item {
+//     margin: 0px 30px 0px 0px;
+//     font-family: 'Rubik';
+//     font-weight: 400;
+//     font-size: 17px;
+//     line-height: 20px;
+//     letter-spacing: 0.03em;
+//     color: #000000;
+// }
+// .menu__item:active {
+//     font-weight: 500;
+//     font-size: 17px;
+//     line-height: 20px;
+//     letter-spacing: 0.03em;
+//     border-radius: 5px;
+    
+// }
+// .menu__item a:before{
+//     content: "";
+//     border-bottom: 2px solid #000000;
+//     background: linear-gradient(90deg, #6A11CB 0%, #2575FC 100%);
+// }
+// .menu__link a:active {
+    
+// }
+//============================= Page ================================================================ //
+.page {
+    flex: 1 1 auto;
+}
+.page__main-block {
 
 }
-.menu__list {
-    display: flex;
-    flex-wrap: wrap;
+//============================= Main-Block ================================================================ //
+.main-block {
+    position: relative;
+    // background: rgba(0, 0, 0, 1);
 }
-.menu__item {
-    margin: 0px 30px 0px 0px;
-    font-family: 'Rubik';
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 20px;
-    letter-spacing: 0.03em;
-    color: #000000;
+.main-block__image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    opacity: 0.5;
 }
-.menu__item:active {
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 20px;
-    letter-spacing: 0.03em;
-    border-radius: 5px;
-    
-}
-.menu__item a:before{
-    content: "";
-    border-bottom: 2px solid #000000;
-    background: linear-gradient(90deg, #6A11CB 0%, #2575FC 100%);
-}
-.menu__link a:active {
-    
-}
-
