--- a/scss/_nullstyle.scss
+++ b/scss/_nullstyle.scss
@@ -13,12 +13,12 @@
 :focus,
 :active {
 	outline: none;
-	color: #000;
+	// color: #000;
 }
 a:focus,
 a:active {
 	outline: none;
-	color: #000;
+	// color: #000;
 }
 nav,
 footer,
@@ -54,7 +54,7 @@ button::-moz-focus-inner {
 }
 a,
 a:visited {
-	color: #000;
+	// color: #000;
 	text-decoration: none;
 }
 a:hover {
