--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   padding: 0;
   margin: 0;
@@ -14,13 +13,11 @@
 :focus,
 :active {
   outline: none;
-  color: #000;
 }
 
 a:focus,
 a:active {
   outline: none;
-  color: #000;
 }
 
 nav,
@@ -63,7 +60,6 @@ button::-moz-focus-inner {
 
 a,
 a:visited {
-  color: #000;
   text-decoration: none;
 }
 
@@ -91,16 +87,16 @@ h6 {
 }
 
 @font-face {
-  font-family: "Untitled Sans";
-  src: url("../fonts/TestUntitledSerif-Regular.eot");
-  src: local("☺"), url("../fonts/TestUntitledSerif-Regular.woff") format("woff"), url("../fonts/TestUntitledSerif-Regular.ttf") format("truetype"), url("../fonts/TestUntitledSerif-Regular.svg") format("svg");
+  font-family: "SaolDisplay-Regular";
+  src: url("../fonts/4c4c08af466e9ad071b6d69cf44093df.eot"); /* IE9*/
+  src: url("4c4c08af466e9ad071b6d69cf44093df.eot?#iefix") format("embedded-opentype"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff2") format("woff2"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff") format("woff"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.ttf") format("truetype"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.svg") format("svg"); /* iOS 4.1- */
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: "SaolDisplay-Regular";
-  src: url("../fonts/4c4c08af466e9ad071b6d69cf44093df.eot"); /* IE9*/
-  src: url("4c4c08af466e9ad071b6d69cf44093df.eot?#iefix") format("embedded-opentype"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff2") format("woff2"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff") format("woff"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.ttf") format("truetype"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.svg") format("svg"); /* iOS 4.1- */
+  font-family: "Untitled Sans";
+  src: url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.eot"); /* IE9*/
+  src: url("952bab25f6798d6bb1937d67e9bee4dd.eot?#iefix") format("embedded-opentype"), url("952bab25f6798d6bb1937d67e9bee4dd.woff2") format("woff2"), url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.woff") format("woff"), url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.ttf") format("truetype"), url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.svg") format("svg"); /* iOS 4.1- */
   font-weight: normal;
   font-style: normal;
 }
@@ -166,6 +162,10 @@ h6 {
   padding: 10px;
 }
 
+.header__burger-block {
+  display: flex;
+}
+
 .header__burger {
   display: block;
   position: relative;
@@ -175,21 +175,82 @@ h6 {
 }
 
 .header__burger-title {
+  color: #FFFFFF;
   font-family: "Untitled Sans";
-  font-weight: 700;
   font-size: 15px;
   line-height: 120%;
+  font-weight: 500;
   text-align: right;
   letter-spacing: 0.05em;
   text-transform: uppercase;
+}
+
+.header__block {
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+.filter-blur {
+  width: 100%;
+  -webkit-backdrop-filter: blur(25px);
+          backdrop-filter: blur(25px);
+}
+
+.header__link {
+  padding: 10px 26px;
+  font-family: "Untitled Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 120%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 
 .page {
   flex: 1 1 auto;
 }
 
-.main-block {
+.page__main-block {
   position: relative;
+}
+
+.main-block__body {
+  padding: 180px 0px 0px 0px;
+  position: relative;
+  z-index: 5;
+  display: flex;
+}
+.section-content1__block {
+  background: #B5D8D6;
+  max-width: 250px;
+}
+.section-content1__text {
+  max-width: 250px;
+  font-family: "Untitled Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 140%;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.section-content2 {
+  max-width: 670px;
+}
+.section-content2__title {
+  font-family: "Saol Display";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 140px;
+  line-height: 100%;
+  text-align: center;
+  color: #FFFFFF;
 }
 
 .main-block__image {
@@ -199,5 +260,8 @@ h6 {
   left: 0;
   top: 0;
   z-index: 1;
+  background: rgb(0, 0, 0);
+}
+.main-block__image img {
   opacity: 0.5;
 }
