--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,22 +1,6 @@
 @import "_nullstyle";
 // null style
-@font-face {
-    font-family: 'Untitled Sans';
-	src: url('../fonts/TestUntitledSerif-Regular.eot');
-	src: local('☺'), url('../fonts/TestUntitledSerif-Regular.woff') format('woff'), url('../fonts/TestUntitledSerif-Regular.ttf') format('truetype'), url('../fonts/TestUntitledSerif-Regular.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-@font-face {font-family: "SaolDisplay-Regular";
-    src: url("../fonts/4c4c08af466e9ad071b6d69cf44093df.eot"); /* IE9*/
-    src: url("4c4c08af466e9ad071b6d69cf44093df.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff2") format("woff2"), /* chrome、firefox */
-    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff") format("woff"), /* chrome、firefox */
-    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.svg") format("svg"); /* iOS 4.1- */
-    font-weight: normal;
-	font-style: normal;
-}
+@import "_fonts";
 
 
 
@@ -60,6 +44,12 @@ body {
     left: 0;
     object-fit: cover;
 }
+//============================ mixines ============================================================== //
+@mixin fo_le($fs, $lh, $fw) {
+    font-size: $fs;
+    line-height: $lh;
+    font-weight: $fw;
+}
 //============================ Header ============================================================== //
 .header {
     position: absolute;
@@ -79,6 +69,9 @@ body {
     // margin: 0px 308px 0px 0px;
     padding: 10px;
 }
+.header__burger-block {
+    display: flex;
+}
 .header__burger {
     display: block;
     position: relative;
@@ -87,13 +80,35 @@ body {
     z-index: 3;
 }
 .header__burger-title {
-    font-family: 'Untitled Sans';
-    font-weight: 700;
-    font-size: 15px;
-    line-height: 120%;
+    color: #FFFFFF;
+    font-family: "Untitled Sans";
+    @include fo_le(15px, 120%, 500);
     text-align: right;
     letter-spacing: 0.05em;
     text-transform: uppercase;
+}
+
+.header__block {
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+}
+.filter-blur {
+    width: 100%;
+    backdrop-filter: blur(25px);
+}
+.header__link {
+    padding: 10px 26px;
+    font-family: 'Untitled Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 120%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #FFFFFF;
 }
 // .header__menu {
     
@@ -131,13 +146,68 @@ body {
 .page {
     flex: 1 1 auto;
 }
-.page__main-block {
-
-}
 //============================= Main-Block ================================================================ //
-.main-block {
+.page__main-block {
+    position: relative; 
+}
+.main-block__body {
+    padding: 180px 0px 0px 0px;
     position: relative;
-    // background: rgba(0, 0, 0, 1);
+    z-index: 5;
+    display: flex; 
+    &__section-content1 {
+        
+    }
+
+    &__section-content2 {
+    }
+
+    &__section-content3 {
+    }
+}
+.section-content1 {
+
+    &__block {
+        background: #B5D8D6;
+        max-width: 250px;
+    }
+
+    &__link {
+    }
+
+    &__text {
+        max-width: 250px;
+        font-family: 'Untitled Sans';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 140%;
+        text-align: center;
+        color: #FFFFFF;
+    }
+}
+.section-content2 {
+    max-width: 670px;
+    &__title {
+        font-family: 'Saol Display';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 140px;
+        line-height: 100%;
+        text-align: center;
+        color: #FFFFFF;
+    }
+}
+.section-content3 {
+
+    &__text {
+    }
+
+    &__block {
+    }
+
+    &__link {
+    }
 }
 .main-block__image {
     position: absolute;
@@ -146,5 +216,8 @@ body {
     left: 0;
     top: 0;
     z-index: 1;
-    opacity: 0.5;
+    background: rgba(0, 0, 0, 1);
+    img {
+        opacity: 0.5;
+    }
 }
