--- a/css/style.css
+++ b/css/style.css
@@ -158,19 +158,114 @@ h6 {
   flex-wrap: wrap;
 }
 
+.header__logo {
+  max-width: 120px;
+  margin-left: 130px;
+}
+.header__logo img {
+  max-width: 100%;
+}
+
 .header__burger-block {
   display: flex;
+  align-items: center;
 }
 
 .header__burger {
   display: block;
   position: relative;
-  width: 30px;
+  width: 24px;
   height: 20px;
   z-index: 3;
+  top: 2px;
+}
+
+.header__burger span {
+  background-color: #fff;
+  position: absolute;
+  width: 80%;
+  height: 3px;
+  left: 0;
+  top: 13px;
+  transition: all 0.5s ease 0s;
+}
+
+.header__burger span:nth-child(2) {
+  top: 4px;
+  width: 50%;
+  height: 3px;
+}
+
+.header__burger span:nth-child(3) {
+  top: -5px;
+  width: 100%;
+}
+
+.header__burger span:nth-child(4) {
+  top: -10px;
+  height: 30px;
+  content: url("../image/main-page/icons/Vector.png");
+  background-color: transparent;
+  transition: all 0.8s ease 0s;
+  opacity: 0;
+}
+
+.header__burger span:nth-child(5) {
+  height: 30px;
+  top: -10px;
+  content: url("../image/main-page/icons/Vector.png");
+  background-color: transparent;
+  transition: all 0.8s ease 0s;
+  opacity: 0;
+}
+
+.header__burger span:nth-child(6) {
+  height: 30px;
+  transition: all 0.8s ease 0s;
+  top: -10px;
+  content: url("../image/main-page/icons/Vector.png");
+  background-color: transparent;
+  opacity: 0;
+}
+
+.header__burger.active span:nth-child(1) {
+  left: -5px;
+  opacity: 0;
+  transition: all 0.5s ease 0s;
+}
+
+.header__burger.active span:nth-child(2) {
+  transition: all 0.25s ease 0s;
+  transform: rotate(45deg) translate(0px, 8px);
+  opacity: 0;
+}
+
+.header__burger.active span:nth-child(3) {
+  transition: all 0.25s ease 0s;
+  transform: rotate(-45deg) translate(0px, 8px);
+  opacity: 0;
+}
+
+.header__burger.active span:nth-child(4) {
+  transition: all 0.8s ease 0s;
+  transform: translate(8px, 0px);
+  opacity: 1;
+}
+
+.header__burger.active span:nth-child(5) {
+  transition: all 0.8s ease 0s;
+  transform: translate(0px, 8px);
+  opacity: 1;
+}
+
+.header__burger.active span:nth-child(6) {
+  transition: all 0.8s ease 0s;
+  transform: translate(-8px, 0px);
+  opacity: 1;
 }
 
 .header__burger-title {
+  padding: 0px 0px 0px 14px;
   color: #FFFFFF;
   font-family: "Untitled Sans";
   font-size: 15px;
@@ -184,6 +279,11 @@ h6 {
 .header__block {
   background: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.15);
+  transition: all 0.5s ease-in 0s;
+}
+.header__block:hover {
+  background: rgba(0, 0, 0, 0.5);
+  transition: all 0.5s ease-in-out 0s;
 }
 
 .filter-blur {
@@ -215,13 +315,30 @@ h6 {
   position: relative;
 }
 
+.main-block__padding {
+  padding: 180px 0px 60px 0px;
+}
+
 .main-block__body {
-  padding: 180px 0px 0px 0px;
+  padding: 0px 0px 110px 0px;
   position: relative;
   z-index: 5;
   display: flex;
   justify-content: space-between;
 }
+
+.main-block__section-content1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.main-block__section-content3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
 .section-content1__block {
   padding: 112px 50px;
   background: #B5D8D6;
@@ -264,7 +381,29 @@ h6 {
   font-weight: 500;
   text-align: center;
   color: #FFFFFF;
+  margin: 0px 0px 150px 0px;
 }
+.section-content3__block {
+  background: #F0BB82;
+  max-width: 250px;
+  border-radius: 50%;
+}
+.section-content3__link {
+  padding: 73px 32px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  max-width: 232px;
+  font-family: "Untitled Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 130%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #3B3633;
+}
+
 .main-block__image {
   position: absolute;
   width: 100%;
@@ -276,4 +415,14 @@ h6 {
 }
 .main-block__image img {
   opacity: 0.5;
+}
+
+.main-block__arrow-block {
+  padding: 14px;
+  position: relative;
+  z-index: 5;
+  max-width: 40px;
+  background: #FFFFFF;
+  border-radius: 30px;
+  margin: 0 auto;
 }
