--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,8 +2,6 @@
 // null style
 @import "_fonts";
 
-
-
 .wrapper {
     min-width: 100%;
     overflow: hidden;
@@ -66,18 +64,99 @@ body {
     flex-wrap: wrap;
 }
 .header__logo {
+    max-width: 120px;
+    margin-left: 130px;
+    img {
+        max-width: 100%;
+    }
 }
+//============================ Header-burger ============================================================== //
 .header__burger-block {
     display: flex;
+    align-items: center;
 }
 .header__burger {
     display: block;
     position: relative;
-    width: 30px;
+    width: 24px;
     height: 20px;
     z-index: 3;
+    top: 2px;
+}
+.header__burger span {
+    background-color: #fff;
+    position: absolute;
+    width: 80%;
+    height: 3px;
+    left: 0;
+    top: 13px;
+    transition: all 0.5s ease 0s;
+}
+.header__burger span:nth-child(2) {
+    top: 4px;
+    width: 50%;
+    height: 3px;
+}
+.header__burger span:nth-child(3) {
+    top: -5px;
+    width: 100%;
+}
+.header__burger span:nth-child(4) {
+    top: -10px;
+    height: 30px;
+    content: url('../image/main-page/icons/Vector.png');
+    background-color: transparent;
+    transition: all 0.8s ease 0s;
+    opacity: 0;
+}
+.header__burger span:nth-child(5) {
+    height: 30px;
+    top: -10px;
+    content: url('../image/main-page/icons/Vector.png');
+    background-color: transparent;
+    transition: all 0.8s ease 0s;
+    opacity: 0;
+}
+.header__burger span:nth-child(6) {
+    height: 30px;
+    transition: all 0.8s ease 0s;
+    top: -10px;
+    content: url('../image/main-page/icons/Vector.png');
+    background-color: transparent;
+    opacity: 0;
+}
+.header__burger.active span:nth-child(1) {
+    left: -5px;
+    opacity: 0;
+    transition: all 0.5s ease 0s;
+}
+.header__burger.active span:nth-child(2) {
+    transition: all 0.25s ease 0s;
+    transform: rotate(45deg) translate(0px, 8px);
+    opacity: 0;
+}
+.header__burger.active span:nth-child(3) {
+    transition: all 0.25s ease 0s;
+    transform: rotate(-45deg) translate(0px, 8px);
+    opacity: 0;
+}
+.header__burger.active span:nth-child(4) {
+    transition: all 0.8s ease 0s;
+    transform: translate(8px, 0px);
+    opacity: 1;
+}
+.header__burger.active span:nth-child(5) {
+    transition: all 0.8s ease 0s;
+    transform: translate(0px, 8px);
+    opacity: 1;
+}
+.header__burger.active span:nth-child(6) {
+    transition: all 0.8s ease 0s;
+    transform: translate(-8px, 0px);
+    opacity: 1;
 }
 .header__burger-title {
+    padding: 0px 0px 0px 14px;
     color: #FFFFFF;
     font-family: "Untitled Sans";
     @include fo_le(15px, 120%, 500);
@@ -85,10 +164,15 @@ body {
     letter-spacing: 0.05em;
     text-transform: uppercase;
 }
-
+//========================================================================================== //
 .header__block {
     background: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.15);
+    transition: all 0.5s ease-in 0s;
+    &:hover {
+        background: rgba(0, 0, 0, 0.5);
+        transition: all 0.5s ease-in-out 0s; 
+    }
 }
 .filter-blur {
     width: 100%;
@@ -146,23 +230,27 @@ body {
 .page__main-block {
     position: relative; 
 }
+.main-block__padding {
+    padding: 180px 0px 60px 0px;
+}
 .main-block__body {
-    padding: 180px 0px 0px 0px;
+    padding: 0px 0px 110px 0px;
     position: relative;
     z-index: 5;
     display: flex; 
     justify-content: space-between;
-    &__section-content1 {
-        
-    }
-    &__section-content2 {
-    }
-
-    &__section-content3 {
-    }
+}
+.main-block__section-content1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.main-block__section-content3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end   ;
 }
 .section-content1 {
-
     &__block {
         padding: 112px 50px;
         background: #B5D8D6;
@@ -203,12 +291,29 @@ body {
         @include fo_le(18px, 140%, 500);
         text-align: center;
         color: #FFFFFF;
+        margin: 0px 0px 150px 0px;
     }
 
     &__block {
+        background: #F0BB82;
+        max-width: 250px;
+        border-radius: 50%;
     }
 
     &__link {
+        padding: 73px 32px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        max-width: 232px;
+        font-family: 'Untitled Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 21px;
+        line-height: 130%;
+        text-align: center;
+        text-transform: uppercase;
+        color: #3B3633;
     }
 }
 .main-block__image {
@@ -221,5 +326,17 @@ body {
     background: rgba(0, 0, 0, 1);
     img {
         opacity: 0.5;
+    }
+}
+
+.main-block__arrow-block {
+    padding: 14px;
+    position: relative;
+    z-index: 5;
+    max-width: 40px;
+    background: #FFFFFF;
+    border-radius: 30px;
+    margin: 0 auto;
+    &__arrow-link {
     }
 }
