--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,4 +1,4 @@
-@font-face {font-family: "SaolDisplay-Regular";
+@font-face {font-family: "Saol Display";
     src: url("../fonts/4c4c08af466e9ad071b6d69cf44093df.eot"); /* IE9*/
     src: url("4c4c08af466e9ad071b6d69cf44093df.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
     url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff2") format("woff2"), /* chrome、firefox */
