--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,6 +55,7 @@ body {
     left: 0;
     top: 0;
     z-index: 50;
+    // opacity: 0;
 }
 .header__container {
     display: flex;
@@ -102,6 +103,7 @@ body {
     width: 100%;
 }
 .header__burger span:nth-child(4) {
+    width: 100%;
     top: -10px;
     height: 30px;
     content: url('../image/main-page/icons/Vector.png');
@@ -110,6 +112,7 @@ body {
     opacity: 0;
 }
 .header__burger span:nth-child(5) {
+    width: 100%;
     height: 30px;
     top: -10px;
     content: url('../image/main-page/icons/Vector.png');
@@ -118,6 +121,7 @@ body {
     opacity: 0;
 }
 .header__burger span:nth-child(6) {
+    width: 100%;
     height: 30px;
     transition: all 0.8s ease 0s;
     top: -10px;
@@ -126,9 +130,8 @@ body {
     opacity: 0;
 }
 .header__burger.active span:nth-child(1) {
-    left: -5px;
     opacity: 0;
-    transition: all 0.5s ease 0s;
+    transition: all 0.25s ease 0s;
 }
 .header__burger.active span:nth-child(2) {
     transition: all 0.25s ease 0s;
@@ -142,17 +145,17 @@ body {
 }
 .header__burger.active span:nth-child(4) {
     transition: all 0.8s ease 0s;
-    transform: translate(8px, 0px);
+    transform: translate(5px, 3px);
     opacity: 1;
 }
 .header__burger.active span:nth-child(5) {
     transition: all 0.8s ease 0s;
-    transform: translate(0px, 8px);
+    transform: translate(0px, -6px);
     opacity: 1;
 }
 .header__burger.active span:nth-child(6) {
     transition: all 0.8s ease 0s;
-    transform: translate(-8px, 0px);
+    transform: translate(-5px, 3px);
     opacity: 1;
 }
 .header__burger-title {
@@ -174,6 +177,11 @@ body {
         transition: all 0.5s ease-in-out 0s; 
     }
 }
+.header__burger-title.hidden, 
+.header__logo.hidden, 
+.header__block.hidden {
+    display: none;
+}
 .filter-blur {
     width: 100%;
     backdrop-filter: blur(25px);
@@ -190,38 +198,111 @@ body {
     text-transform: uppercase;
     color: #FFFFFF;
 }
-// .header__menu {
-    
-// }
-// .menu__list {
-//     display: flex;
-//     flex-wrap: wrap;
-// }
-// .menu__item {
-//     margin: 0px 30px 0px 0px;
-//     font-family: 'Rubik';
-//     font-weight: 400;
-//     font-size: 17px;
-//     line-height: 20px;
-//     letter-spacing: 0.03em;
-//     color: #000000;
-// }
-// .menu__item:active {
-//     font-weight: 500;
-//     font-size: 17px;
-//     line-height: 20px;
-//     letter-spacing: 0.03em;
-//     border-radius: 5px;
-    
-// }
-// .menu__item a:before{
-//     content: "";
-//     border-bottom: 2px solid #000000;
-//     background: linear-gradient(90deg, #6A11CB 0%, #2575FC 100%);
-// }
-// .menu__link a:active {
-    
-// }
+
+.header__menu-content {
+    position: absolute;
+    width: 100%;
+    // top: -100%;
+    left: -100%;
+    z-index: 10;
+    background: linear-gradient(0deg, rgba(54, 58, 69, 0.96), rgba(54, 58, 69, 0.96)), url(image.png);
+    transition: all 1s ease 0s;
+}
+.header__menu-content.active {
+    transition: all 1s ease 0s;
+    top: 0%;
+    left: 0%;
+}
+.header__menu-container {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 10%;
+}
+.header__body {
+    max-width: 1180px;
+    margin: 10% 0px 65px 0px;
+    display: flex;
+    justify-content: space-between;
+}
+.header__menu {
+
+    .menu__list {
+
+        .menu__item {
+
+            .menu__link{
+                font-family: 'Saol Display';
+                @include fo_le(70px, 100%, 400);
+                color: #FFFFFF;
+            }
+        }
+        .menu__item:not(:last-child) {
+            margin: 0px 0px 30px 0px;
+        }
+    }
+}
+[class*='contacts__title'],
+[class*='contacts__link'] {
+    font-family: 'Untitled Sans';
+    @include fo_le(18px, 140%, 500);
+    color: #FFFFFF;
+}
+.header__head-contacts {
+
+}
+.head-contacts__title {
+    margin: 0px 0px 53px 0px;
+}
+.head-contacts__block {
+    margin: 0px 0px 120px 0px;
+    .head-contacts__email {
+        font-family: 'Untitled Sans';
+        @include fo_le(20px, 28px, 400);
+        color: #FFFFFF;
+    }
+}
+.head-contacts__list {
+
+    .head-contacts__item {
+
+        .head-contacts__link {
+
+        }
+    }
+    .head-contacts__item:not(:last-child) {
+        margin: 0px 0px 33px 0px;
+    }
+}
+.head-contacts__paper-block {
+    margin: 207px 0px 0px 0px;
+    display: flex;
+    align-items: center;
+    .head-contacts__link-download {
+        padding: 0px 0px 0px 18px;
+        font-family: 'Untitled Sans';
+        @include fo_le(15px, 120%, 700);
+        align-items: center;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
+}
+.header-copyright {
+    border-top: 2px solid rgb(255, 255, 255, 0.1);
+}
+.header-copyright__container {
+    padding: 28px 0px;
+    max-width: 1180px;
+    display: flex;
+    justify-content: space-between;
+    p {
+        font-family: 'Untitled Sans';
+        @include fo_le(15px, 140%, 500);
+        color: #FFFFFF;
+        opacity: 0.4;
+    }
+}
 //============================= Page ================================================================ //
 .page {
     flex: 1 1 auto;
@@ -229,6 +310,13 @@ body {
 //============================= Main-Block ================================================================ //
 .page__main-block {
     position: relative; 
+}
+.main-block__container {
+    transition: all 0.5s ease 0s;
+}
+.main-block__container.hidden {
+    transition: all 0.8s ease 0s;
+    opacity: 0;
 }
 .main-block__padding {
     padding: 180px 0px 60px 0px;
