--- a/css/style.css
+++ b/css/style.css
@@ -87,24 +87,113 @@ h6 {
 }
 
 @font-face {
-  font-family: "Saol Display";
-  src: url("../fonts/4c4c08af466e9ad071b6d69cf44093df.eot"); /* IE9*/
-  src: url("4c4c08af466e9ad071b6d69cf44093df.eot?#iefix") format("embedded-opentype"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff2") format("woff2"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff") format("woff"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.ttf") format("truetype"), url("../fonts/4c4c08af466e9ad071b6d69cf44093df.svg") format("svg"); /* iOS 4.1- */
+  font-family: "Untitled Sans";
+  src: url("UntitledSans-Regular.woff2") format("woff2"), url("UntitledSans-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Untitled Sans";
-  src: url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.eot"); /* IE9*/
-  src: url("952bab25f6798d6bb1937d67e9bee4dd.eot?#iefix") format("embedded-opentype"), url("952bab25f6798d6bb1937d67e9bee4dd.woff2") format("woff2"), url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.woff") format("woff"), url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.ttf") format("truetype"), url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.svg") format("svg"); /* iOS 4.1- */
+  src: url("../fonts/UntitledSans-Medium.woff2") format("woff2"), url("../fonts/UntitledSans-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Untitled Sans";
+  src: url("../fonts/UntitledSans-Bold.woff2") format("woff2"), url("../fonts/UntitledSans-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Untitled Sans";
+  src: url("../fonts/UntitledSans-Light.woff2") format("woff2"), url("../fonts/UntitledSans-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Untitled Sans";
+  src: url("../fonts/UntitledSans-Regular.woff2") format("woff2"), url("../fonts/UntitledSans-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Saol Display";
+  src: url("../fonts/SaolDisplay-Regular.woff2") format("woff2"), url("../fonts/SaolDisplay-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Saol Display";
+  src: url("../fonts/SaolDisplay-LightItalic.woff2") format("woff2"), url("../fonts/SaolDisplay-LightItalic.woff") format("woff");
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Saol Display";
+  src: url("../fonts/SaolDisplay-Light.woff2") format("woff2"), url("../fonts/SaolDisplay-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Gilroy";
+  src: url("../fonts/Gilroy-Regular.woff2") format("woff2"), url("../fonts/Gilroy-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Gilroy";
+  src: url("../fonts/Gilroy-Bold.woff2") format("woff2"), url("../fonts/Gilroy-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/Inter-SemiBold.woff2") format("woff2"), url("../fonts/Inter-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Open Sans";
+  src: url("../fonts/OpenSans-Semibold.woff2") format("woff2"), url("../fonts/OpenSans-Semibold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/Inter-Regular.woff2") format("woff2"), url("../fonts/Inter-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Hind";
+  src: url("../fonts/Hind-Semibold.woff2") format("woff2"), url("../fonts/Hind-Semibold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
 }
 .wrapper {
   min-width: 100%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
+}
+
+body {
+  font-family: "Untitled Sans";
+  font-weight: normal;
 }
 
 ._container {
@@ -161,11 +250,22 @@ h6 {
 .header__logo {
   max-width: 120px;
   margin-left: 130px;
+  transition: all 0.8s ease 1s;
 }
 .header__logo img {
   max-width: 100%;
 }
 
+@media (max-width: 769px) {
+  .header__logo {
+    margin-left: 0px;
+  }
+}
+@media (max-width: 426px) {
+  .header__logo {
+    max-width: 80px;
+  }
+}
 .header__burger-block {
   display: flex;
   align-items: center;
@@ -269,50 +369,67 @@ h6 {
 .header__burger-title {
   padding: 0px 0px 0px 14px;
   color: #FFFFFF;
-  font-family: "Untitled Sans";
   font-size: 15px;
-  line-height: 120%;
-  font-weight: 500;
+  line-height: 1.2;
+  font-weight: 700;
   text-align: right;
   letter-spacing: 0.05em;
   text-transform: uppercase;
 }
 
-.header__block {
+@media (max-width: 576px) {
+  .header__burger-title {
+    display: none;
+  }
+}
+.header__link {
+  display: inline-block;
+  padding: 10px 26px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  font-size: 15px;
+  line-height: 1.2;
+  font-weight: 700;
   background: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.15);
   transition: all 0.5s ease-in 0s;
 }
-.header__block:hover {
+.header__link:hover {
   background: rgba(0, 0, 0, 0.5);
   transition: all 0.5s ease-in-out 0s;
 }
-
-.header__burger-title.hidden,
-.header__logo.hidden,
-.header__block.hidden {
+.header__link .header__link-mob {
   display: none;
 }
 
-.filter-blur {
-  width: 100%;
-  -webkit-backdrop-filter: blur(25px);
-          backdrop-filter: blur(25px);
+@media (max-width: 769px) {
+  .header__link {
+    padding: 10px;
+    background: rgba(255, 255, 255, 0);
+    border: none;
+  }
+  .header__link:hover {
+    background: rgba(0, 0, 0, 0);
+  }
+  .header__link span {
+    display: none;
+  }
+  .header__link .header__link-mob {
+    display: inline-block;
+    transition: all 0.5s ease 0s;
+  }
 }
-
-.header__link {
-  padding: 10px 26px;
-  font-family: "Untitled Sans";
-  font-style: normal;
-  font-size: 15px;
-  line-height: 120%;
-  font-weight: 700;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
-  color: #FFFFFF;
+@media (max-width: 426px) {
+  .header__link {
+    padding: 0px;
+  }
+}
+.header__burger-title.hidden,
+.header__logo.hidden,
+.header__link.hidden {
+  display: none;
+  transition: all 5.8s ease 0s;
 }
 
 .header__menu-content {
@@ -321,11 +438,69 @@ h6 {
   left: -100%;
   z-index: 10;
   background: linear-gradient(0deg, rgba(54, 58, 69, 0.96), rgba(54, 58, 69, 0.96)), url(image.png);
-  transition: all 1s ease 0s;
+  transition: all 2s ease 0s;
+}
+
+.header-image {
+  max-width: 517px;
+  position: absolute;
+  top: 0px;
+  right: 2px;
+}
+.header-image img {
+  max-width: 100%;
+}
+
+.header__close-block {
+  position: absolute;
+  top: 0;
+  right: 9%;
+  z-index: 70;
+  opacity: 0;
+  transition: all 0.5s ease 0s;
+  transform: scale(1.2) translateY(-50px);
+}
+
+.header__close-block.hidden {
+  transform: scale(1) translateY(0px);
+  opacity: 1;
+  transition: all 1s ease 3s;
+}
+
+.header__close {
+  display: block;
+  position: relative;
+  top: 28px;
+  right: -92%;
+  width: 50px;
+  height: 50px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  border-radius: 40px;
+  z-index: 15;
+  cursor: pointer;
+}
+
+.header__close span {
+  position: absolute;
+  top: 22px;
+  left: 13px;
+  width: 50%;
+  height: 2px;
+  background-color: #fff;
+  transform: rotate(45deg);
+}
+
+.header__close span:nth-child(2) {
+  transform: rotate(-45deg);
+  width: 50%;
+  height: 2px;
+  top: 22px;
+  left: 13px;
 }
 
 .header__menu-content.active {
-  transition: all 1s ease 0s;
+  transition: all 2s ease 0s;
   top: 0%;
   left: 0%;
 }
@@ -338,6 +513,7 @@ h6 {
 }
 
 .header__body {
+  position: relative;
   max-width: 1180px;
   margin: 10% 0px 65px 0px;
   display: flex;
@@ -347,7 +523,7 @@ h6 {
 .header__menu .menu__list .menu__item .menu__link {
   font-family: "Saol Display";
   font-size: 70px;
-  line-height: 100%;
+  line-height: 1;
   font-weight: 400;
   color: #FFFFFF;
 }
@@ -357,9 +533,8 @@ h6 {
 
 [class*=contacts__title],
 [class*=contacts__link] {
-  font-family: "Untitled Sans";
   font-size: 18px;
-  line-height: 140%;
+  line-height: 1.4;
   font-weight: 500;
   color: #FFFFFF;
 }
@@ -372,9 +547,8 @@ h6 {
   margin: 0px 0px 120px 0px;
 }
 .head-contacts__block .head-contacts__email {
-  font-family: "Untitled Sans";
   font-size: 20px;
-  line-height: 28px;
+  line-height: 1.4;
   font-weight: 400;
   color: #FFFFFF;
 }
@@ -390,9 +564,8 @@ h6 {
 }
 .head-contacts__paper-block .head-contacts__link-download {
   padding: 0px 0px 0px 18px;
-  font-family: "Untitled Sans";
   font-size: 15px;
-  line-height: 120%;
+  line-height: 1.2;
   font-weight: 700;
   align-items: center;
   letter-spacing: 0.05em;
@@ -411,9 +584,8 @@ h6 {
   justify-content: space-between;
 }
 .header-copyright__container p {
-  font-family: "Untitled Sans";
   font-size: 15px;
-  line-height: 140%;
+  line-height: 1.4;
   font-weight: 500;
   color: #FFFFFF;
   opacity: 0.4;
@@ -428,11 +600,11 @@ h6 {
 }
 
 .main-block__container {
-  transition: all 0.5s ease 0s;
+  transition: all 1s ease 0s;
 }
 
 .main-block__container.hidden {
-  transition: all 0.8s ease 0s;
+  transition: all 1s ease 0s;
   opacity: 0;
 }
 
@@ -448,6 +620,11 @@ h6 {
   justify-content: space-between;
 }
 
+@media (max-width: 1180px) {
+  .main-block__body {
+    flex-direction: column;
+  }
+}
 .main-block__section-content1 {
   display: flex;
   flex-direction: column;
@@ -460,71 +637,98 @@ h6 {
   justify-content: flex-end;
 }
 
-.section-content1__block {
-  padding: 112px 50px;
-  background: #B5D8D6;
-  max-width: 250px;
-  border-radius: 50%;
+@media (max-width: 1180px) {
+  .main-block__section-content2 {
+    margin: 30px 0px;
+  }
+  .main-block__section-content3 {
+    flex-direction: row;
+  }
 }
 .section-content1__link {
-  font-family: "Untitled Sans";
+  background: #B5D8D6;
+  max-width: 250px;
+  height: 250px;
+  cursor: pointer;
+  border-radius: 50%;
+  display: inline-block;
+  padding: 112px 50px;
   font-size: 21px;
-  line-height: 130%;
-  font-weight: 500;
+  line-height: 1.3;
+  font-weight: 700;
   text-align: center;
   text-transform: uppercase;
   color: #3B3633;
 }
 .section-content1__text {
   max-width: 250px;
-  font-family: "Untitled Sans";
   font-size: 18px;
-  line-height: 140%;
+  line-height: 1.4;
   font-weight: 500;
   text-align: center;
   color: #FFFFFF;
 }
 
+@media (max-width: 1220px) {
+  .section-content1__text {
+    display: none;
+  }
+}
 .section-content2__text {
   font-family: "Saol Display";
   font-size: 140px;
-  line-height: 100%;
+  line-height: 1;
   font-weight: 300;
   text-align: center;
   color: #FFFFFF;
 }
+.section-content2__subtext {
+  display: none;
+}
 
+@media (max-width: 769px) {
+  .section-content2__text {
+    font-size: 120px;
+    line-height: 1;
+    font-weight: 300;
+    margin-bottom: 24px;
+  }
+  .section-content2__subtext {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 400px;
+  }
+}
 .section-content3__text {
   max-width: 230px;
-  font-family: "Untitled Sans";
   font-size: 18px;
-  line-height: 140%;
+  line-height: 1.4;
   font-weight: 500;
   text-align: center;
   color: #FFFFFF;
   margin: 0px 0px 150px 0px;
 }
-.section-content3__block {
-  background: #F0BB82;
-  max-width: 250px;
-  border-radius: 50%;
-}
 .section-content3__link {
+  cursor: pointer;
   padding: 73px 32px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  max-width: 232px;
-  font-family: "Untitled Sans";
-  font-style: normal;
-  font-weight: 700;
+  background: #F0BB82;
+  max-width: 200px;
+  border-radius: 50%;
+  display: inline-block;
   font-size: 21px;
-  line-height: 130%;
+  line-height: 1.3;
+  font-weight: 700;
   text-align: center;
   text-transform: uppercase;
   color: #3B3633;
 }
 
+@media (max-width: 1220px) {
+  .section-content3__text {
+    display: none;
+  }
+}
 .main-block__image {
   position: absolute;
   width: 100%;
@@ -539,11 +743,18 @@ h6 {
 }
 
 .main-block__arrow-block {
-  padding: 14px;
   position: relative;
   z-index: 5;
-  max-width: 40px;
+  width: 40px;
+  height: 40px;
   background: #FFFFFF;
-  border-radius: 30px;
+  border-radius: 50%;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main-block__arrow-block .main-block__arrow-link {
+  display: inline-block;
+  padding: 14px;
 }
