--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,20 +1,121 @@
-@font-face {font-family: "Saol Display";
-    src: url("../fonts/4c4c08af466e9ad071b6d69cf44093df.eot"); /* IE9*/
-    src: url("4c4c08af466e9ad071b6d69cf44093df.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff2") format("woff2"), /* chrome、firefox */
-    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.woff") format("woff"), /* chrome、firefox */
-    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url("../fonts/4c4c08af466e9ad071b6d69cf44093df.svg") format("svg"); /* iOS 4.1- */
+@font-face {
+    font-family: 'Untitled Sans';
+    src: url('UntitledSans-Regular.woff2') format('woff2'),
+        url('UntitledSans-Regular.woff') format('woff');
     font-weight: normal;
-	font-style: normal;
+    font-style: normal;
+    font-display: swap;
 }
-@font-face {font-family: "Untitled Sans";
-    src: url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.eot"); /* IE9*/
-    src: url("952bab25f6798d6bb1937d67e9bee4dd.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("952bab25f6798d6bb1937d67e9bee4dd.woff2") format("woff2"), /* chrome、firefox */
-    url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.woff") format("woff"), /* chrome、firefox */
-    url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url("../fonts/952bab25f6798d6bb1937d67e9bee4dd.svg") format("svg"); /* iOS 4.1- */
+@font-face {
+    font-family: 'Untitled Sans';
+    src: url('../fonts/UntitledSans-Medium.woff2') format('woff2'),
+        url('../fonts/UntitledSans-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Untitled Sans';
+    src: url('../fonts/UntitledSans-Bold.woff2') format('woff2'),
+        url('../fonts/UntitledSans-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Untitled Sans';
+    src: url('../fonts/UntitledSans-Light.woff2') format('woff2'),
+        url('../fonts/UntitledSans-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Untitled Sans';
+    src: url('../fonts/UntitledSans-Regular.woff2') format('woff2'),
+        url('../fonts/UntitledSans-Regular.woff') format('woff');
     font-weight: normal;
-	font-style: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Saol Display';
+    src: url('../fonts/SaolDisplay-Regular.woff2') format('woff2'),
+        url('../fonts/SaolDisplay-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Saol Display';
+    src: url('../fonts/SaolDisplay-LightItalic.woff2') format('woff2'),
+        url('../fonts/SaolDisplay-LightItalic.woff') format('woff');
+    font-weight: 300;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Saol Display';
+    src: url('../fonts/SaolDisplay-Light.woff2') format('woff2'),
+        url('../fonts/SaolDisplay-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Gilroy';
+    src: url('../fonts/Gilroy-Regular.woff2') format('woff2'),
+        url('../fonts/Gilroy-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Gilroy';
+    src: url('../fonts/Gilroy-Bold.woff2') format('woff2'),
+        url('../fonts/Gilroy-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url('../fonts/Inter-SemiBold.woff2') format('woff2'),
+        url('../fonts/Inter-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../fonts/OpenSans-Semibold.woff2') format('woff2'),
+        url('../fonts/OpenSans-Semibold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url('../fonts/Inter-Regular.woff2') format('woff2'),
+        url('../fonts/Inter-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Hind';
+    src: url('../fonts/Hind-Semibold.woff2') format('woff2'),
+        url('../fonts/Hind-Semibold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
 }
